# Fish-for-Hexchat

./: LICENSE  README.md  blowfish.cpp  blowfish.h  blowfish.vcxproj  blowfish.vcxproj.filters  blowfish_cbc.cpp  blowfish_cbc.h  dh1080.cpp  dh1080.h  ircmessage.cpp  ircmessage.h  keymanagement.cpp  keymanagement.h  meson.build  plugin_hexchat.cpp  plugin_hexchat.h  utils.cpp  utils.h
